--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,18 +3,9 @@ name: Build and Push to GHCR
 on:
   push:
     branches: [main]
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  packages: write
-
-env:
-  IMAGE_REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ secrets.GHCR_USERNAME && toLower(secrets.GHCR_USERNAME) || toLower(github.repository_owner) }}/network
 
 jobs:
-  build-and-push:
+  build-andpush:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -27,8 +18,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME || github.repository_owner }}
-          password: ${{ secrets.GHCR_TOKEN || secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Write .env file
         if: ${{ secrets.DOTENV_FILE != '' }}
@@ -36,16 +27,16 @@ jobs:
 
       - name: Generate image tag
         id: vars
-        run: echo "tag=$(date +'%Y%m%d%H%M')" >> "$GITHUB_OUTPUT"
+        run: echo "tag=$(date +'%Y%m%d%H%M')" >> $GITHUB_OUTPUT
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v5
         with:
-          context: ./backend
-          file: ./backend/Dockerfile
+          context: .
+          file: ./Dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.tag }}
+            ghcr.io/${{ secrets.GHCR_USERNAME }}/hello-world:latest
+            ghcr.io/${{ secrets.GHCR_USERNAME }}/hello-world:${{ steps.vars.outputs.tag }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
