--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,8 +11,7 @@ permissions:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_OWNER: ${{ secrets.GHCR_USERNAME != '' && toLower(secrets.GHCR_USERNAME) || toLower(github.repository_owner) }}
-  IMAGE_NAME: network
+  IMAGE_NAME: ${{ github.event.repository.name }}
 
 jobs:
   build-and-push:
@@ -24,21 +23,25 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Prepare image vars
+        run: |
+          echo "IMAGE_OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_ENV"
+
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ env.IMAGE_OWNER }}
-          password: ${{ secrets.GHCR_TOKEN || secrets.GITHUB_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-          
       - name: Write .env file (for build args)
-        if: ${{ secrets.DOTENV_FILE && secrets.DOTENV_FILE != '' }}
         working-directory: backend
         env:
           DOTENV_FILE: ${{ secrets.DOTENV_FILE }}
         run: |
-          printf "%s" "$DOTENV_FILE" > .env
+          if [ -n "$DOTENV_FILE" ]; then
+            printf "%s" "$DOTENV_FILE" > .env
+          fi
 
       - name: Generate image tag
         id: vars
